Update name from 'Muthukumar Sambandam' to 'Muthukumar S'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Muthukumar Sambandam | DevOps & SRE Portfolio</title>
+  <title>Muthukumar S | DevOps & SRE Portfolio</title>
   <style>
     :root {
       --bg: #ffffff;
@@ -87,7 +87,7 @@
 </head>
 <body>
   <header>
-    <h1>Muthukumar Sambandam</h1>
+    <h1>Muthukumar S</h1>
     <p>Senior Site Reliability Engineer | DevOps | Cloud | Automation</p>
     <nav>
       <a href="#about">About</a>
@@ -101,9 +101,9 @@
   <div class="container">
     <section id="about" class="card">
       <h2>About Me</h2>
-      <img src="https://avatars.githubusercontent.com/u/183137947?v=4" alt="Muthukumar Sambandam" style="width:140px;height:140px;border-radius:50%;margin-bottom:15px;" />
+      <img src="https://avatars.githubusercontent.com/u/183137947?v=4" alt="Muthukumar S" style="width:140px;height:140px;border-radius:50%;margin-bottom:15px;" />
       <p>
-        Hi, I'm <strong>Muthukumar Sambandam</strong>, a Senior Site Reliability Engineer passionate about
+        Hi, I'm <strong>Muthukumar S</strong>, a Senior Site Reliability Engineer passionate about
         building scalable systems, cloud automation, and DevOps engineering. I work extensively with
         Kubernetes, GitOps, CI/CD, Observability, and Site Reliability practices. I also enjoy applying AI
         tooling to engineering workflows for boosting developer productivity.
@@ -161,7 +161,7 @@
   </div>
 
   <footer>
-    <p>© 2025 Muthukumar Sambandam</p>
+    <p>© 2025 Muthukumar S</p>
   </footer>
 
   <script>
