--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       margin-top: 40px;
       background: var(--card);
     }
+
+    .muted { color: #666; font-size: 0.95rem; }
+    .error { color: #b00020; }
   </style>
 </head>
 <body>
@@ -101,13 +104,14 @@
   <div class="container">
     <section id="about" class="card">
       <h2>About Me</h2>
-      <img src="https://avatars.githubusercontent.com/u/183137947?v=4" alt="Muthukumar S" style="width:140px;height:140px;border-radius:50%;margin-bottom:15px;" />
+      <img id="profile-pic" src="https://github.com/truedevopsmk-lab.png" alt="Muthukumar S" style="width:140px;height:140px;border-radius:50%;margin-bottom:15px;" />
       <p>
         Hi, I'm <strong>Muthukumar S</strong>, a Senior Site Reliability Engineer passionate about
         building scalable systems, cloud automation, and DevOps engineering. I work extensively with
         Kubernetes, GitOps, CI/CD, Observability, and Site Reliability practices. I also enjoy applying AI
         tooling to engineering workflows for boosting developer productivity.
       </p>
+      <p class="muted">Note: if your profile picture was recently updated it may take a few minutes to propagate to caches.</p>
     </section>
 
     <section id="skills" class="card">
@@ -125,28 +129,67 @@
     <section id="projects" class="card">
       <h2>Projects</h2>
       <div id="repo-list" class="projects-grid">
-        <!-- GitHub API injected projects will load here -->
+        <div class="muted">Loading repositories...</div>
       </div>
+      <div id="repo-error" class="muted" style="margin-top:12px; display:none;"></div>
     </section>
 
     <script>
       async function loadRepos() {
-        const response = await fetch('https://api.github.com/users/truedevopsmk-lab/repos');
-        const repos = await response.json();
-
         const container = document.getElementById('repo-list');
+        const errorNode = document.getElementById('repo-error');
         container.innerHTML = '';
+        errorNode.style.display = 'none';
 
-        repos.forEach(repo => {
-          const card = document.createElement('div');
-          card.className = 'project-card';
-          card.innerHTML = `
-            <h3>${repo.name}</h3>
-            <p>${repo.description || 'No description available.'}</p>
-            <a href="${repo.html_url}" target="_blank">View on GitHub</a>
-          `;
-          container.appendChild(card);
-        });
+        const endpoint = 'https://api.github.com/users/truedevopsmk-lab/repos?per_page=100&sort=updated';
+
+        try {
+          const response = await fetch(endpoint, { cache: 'no-store' });
+          if (!response.ok) throw new Error('API error: ' + response.status);
+
+          const repos = await response.json();
+          if (!Array.isArray(repos) || repos.length === 0) {
+            container.innerHTML = '<div class="muted">No public repositories found.</div>';
+            return;
+          }
+
+          repos.forEach(repo => {
+            const card = document.createElement('div');
+            card.className = 'project-card';
+            card.innerHTML = `
+              <h3>${repo.name}</h3>
+              <p>${repo.description || 'No description available.'}</p>
+              <p class="muted">⭐ ${repo.stargazers_count} • 🍴 ${repo.forks_count} • ${repo.language || '—'}</p>
+              <a href="${repo.html_url}" target="_blank">View on GitHub</a>
+            `;
+            container.appendChild(card);
+          });
+
+        } catch (err) {
+          console.error(err);
+          errorNode.style.display = 'block';
+          errorNode.className = 'error';
+          errorNode.textContent = 'Could not load repositories. Showing fallback list.';
+
+          const fallback = [
+            { name: 'devops-lab', description: 'CI/CD + Kubernetes lab (fallback)', html_url: 'https://github.com/truedevopsmk-lab/devops-lab', stargazers_count: 0, forks_count: 0, language: 'Shell' },
+            { name: 'sre-toolkit', description: 'Incident response automation scripts (fallback)', html_url: 'https://github.com/truedevopsmk-lab/sre-toolkit', stargazers_count: 0, forks_count: 0, language: 'Python' },
+            { name: 'cloud-cost-optimizer', description: 'Cost spike detection utility (fallback)', html_url: 'https://github.com/truedevopsmk-lab/cloud-cost-optimizer', stargazers_count: 0, forks_count: 0, language: 'Go' }
+          ];
+
+          container.innerHTML = '';
+          fallback.forEach(repo => {
+            const card = document.createElement('div');
+            card.className = 'project-card';
+            card.innerHTML = `
+              <h3>${repo.name}</h3>
+              <p>${repo.description}</p>
+              <p class="muted">⭐ ${repo.stargazers_count} • 🍴 ${repo.forks_count} • ${repo.language}</p>
+              <a href="${repo.html_url}" target="_blank">View on GitHub</a>
+            `;
+            container.appendChild(card);
+          });
+        }
       }
 
       loadRepos();
@@ -155,8 +198,8 @@
     <section id="contact" class="card">
       <h2>Contact</h2>
       <p>Email: muthukumar@domain.com</p>
-      <p>GitHub: github.com/truedevopsmk-lab</p>
-      <p>LinkedIn: linkedin.com/in/muthukumar</p>
+      <p>GitHub: <a href="https://github.com/truedevopsmk-lab" target="_blank">github.com/truedevopsmk-lab</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/muthukumar" target="_blank">linkedin.com/in/muthukumar</a></p>
     </section>
   </div>
 
@@ -166,7 +209,7 @@
 
   <script>
     function toggleTheme() {
-      const current = document.documentElement.getAttribute("data-theme");
+      const current = document.documentElement.getAttribute("data-theme") || 'light';
       document.documentElement.setAttribute(
         "data-theme",
         current === "dark" ? "light" : "dark"
