--- a/index.html
+++ b/index.html
@@ -218,3 +218,11 @@
   </script>
 </body>
 </html>
+
+<div class="repo">
+  <strong>flight-tracker</strong><br>
+  🔗 <a href="https://github.com/truedevopsmk-lab/flight-tracker">GitHub Repo</a><br>
+  🌐 <a href="https://truedevopsmk-lab.github.io/flight-tracker/">Live Webpage</a>
+</div>
+
+
